[package]
name = "fragment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
flax = "0.3.0"
flume = "0.10.14"
futures = "0.3.24"
futures-signals = "0.3.31"
once_cell = "1.15.0"
slotmap = "1.0.6"
thiserror = "1.0.37"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
