[package]
name = "fragment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
async-trait = "0.1.58"
eyre = "0.6.8"
flax = { version = "0.3.2", features = ["tokio"] }
flume = "0.10.14"
futures = "0.3.24"
futures-signals = "0.3.31"
glam = "0.22.0"
manual_future = "0.1.1"
once_cell = "1.15.0"
slotmap = "1.0.6"
thiserror = "1.0.37"
tokio = "1.21.2"
itertools = "0.10"

[dev-dependencies]
crossterm = { version = "0.25.0", features = ["futures-core", "event-stream"] }
tokio = { version = "1.21.2", features = ["full"] }
