[package]
resolver = "2"
name = "fragment-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures-signals = "0.3"
flax = "0.3"
fragments-core = { path = "../fragments-core/" }
winit = "0.27"
wgpu = "0.14"
eyre = "0.6"
futures = "0.3"
tokio = { version = "1.21", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.2"
